# svender-bass

./: CMakeLists.txt  README.md
resource/: NordVST.uidesc
source/: controller.cpp  controller.h  dsp.h  editor.cpp  editor.h  factory.cpp  ids.h  processor.cpp  processor.h  version.h
